--- a/front/views/board/category/boardList.html
+++ b/front/views/board/category/boardList.html
@@ -39,7 +39,7 @@
                 <div class="listRight">
                     <!-- 상단 고정 부분 -->
                     <div class="top">
-                        <h1>전체글 (12345개)</h1>
+                        <h1>전체글 ({{count}}개)</h1>
                         <!-- <button href="#">글쓰기</button> -->
                     </div>
 
