feat: back directory 초기설정, front->main.html axios script 사용

--- a/front/views/main.html
+++ b/front/views/main.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/root.css" />
         <link rel="stylesheet" href="/css/layout/header.css" />
         <link rel="stylesheet" href="/css/layout/footer.css" />
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <style>
             .mainWrap {
                 width: 100%;
