feat: boardWrite 데이터 보내기 완료

--- a/front/views/board/category/boardWrite.html
+++ b/front/views/board/category/boardWrite.html
@@ -54,7 +54,7 @@
                                 <input type="text" class="hashtagBox" placeholder="해시태그" style="border: none" />
                             </li>
                         </ul>
-                        <button class="submitBtn">등록하기</button>
+                        <button type="submit" class="submitBtn">등록하기</button>
                     </form>
                     <button class="cancelBtn" onclick="location.href='list'">돌아가기</button>
                 </div>
