feat : qna 라우터 리스트, 뷰 설정

--- a/front/views/board/category/boardWrite.html
+++ b/front/views/board/category/boardWrite.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="write">
-                    <form method="post" action="/board/write">
+                    <form method="post" action="/board/write" enctype="multipart/form-data">
                         <ul>
                             <li class="subject">
                                 <select class="mainCategorySelect" name="mainName">
