--- a/front/views/layout/listForm.html
+++ b/front/views/layout/listForm.html
@@ -26,6 +26,11 @@
                 </tr>
                 {%endfor%}
             </tbody>
+            <!-- {%if count === 0 %}
+            <div>
+                <span>[ 등록된 글이 없습니다 ]</span>
+            </div>
+            {%endif%} -->
         </table>
         <div class="bottom">
             <a href="/{{board}}/write">글쓰기</a>
