feat:front 화면 수정 및 더미데이터 생성

--- a/front/public/css/root.css
+++ b/front/public/css/root.css
@@ -1,7 +1,7 @@
 :root {
     --header: #adc46d;
     --footer: #526a7e;
-    --joinFooter: rgba(110, 90, 60, 0.7);
+    --joinFooter: rgb(150, 120, 80);
     --main: #fdfdfd;
     --fontColor: #2e2e2e;
     --border: #cecece;
