--- a/front/views/error.html
+++ b/front/views/error.html
@@ -22,7 +22,7 @@
                         <h1>문제가 생겼어요..</h1>
                         <p>다시 한번 확인해주세요</p>
                     </div>
-                    <div id="errorBefore"><button>이전으로</button></div>
+                    <div id="errorBefore"><a href="/">메인 페이지로</a></div>
                 </div>
             </div>
         </div>
