--- a/front/public/css/user/login.css
+++ b/front/public/css/user/login.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 20%, rgb(110, 90, 60, 0.5) 100%), url(../../img/join.jpg) 10% no-repeat;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.2) 20%, rgb(110, 90, 60, 0.6) 100%), url(../../img/join.jpg) 10% no-repeat;
     background-size: cover;
 }
 
@@ -24,7 +24,7 @@ body {
 }
 
 #loginForm {
-    margin: 0rem auto 5rem;
+    margin: 0rem auto 15rem;
     width: 70rem;
     height: 60rem;
     background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/joinForm.jpg) 10% no-repeat;
@@ -62,7 +62,7 @@ body {
 
 #loginFooterWrap {
     width: 100%;
-    height: 15rem;
+    height: 10rem;
 }
 
 #loginContents {
@@ -71,7 +71,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
@@ -83,7 +83,6 @@ body {
 }
 
 #loginBoxWrap > input, button {
-    margin: 1rem 0;
     box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
@@ -103,7 +102,7 @@ body {
     line-height: 3rem;
     width: 28rem;
     height: 4.5rem;
-    margin: 2rem auto;
+    margin: 1rem auto 0;
     border: none;
     border-radius: 0.5rem;
     box-sizing: border-box;
@@ -114,9 +113,43 @@ body {
     background-color: var(--header);
 }
 
+#loginBoxWrap > button:hover {
+    color: var(--header);
+    background-color: var(--main);
+}
+
+#loginApi {
+    margin: 1rem 0 0;
+}
+
 #loginApi > a {
-    display: inline-block;
-    margin: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin: 0 1rem; */
+    text-align: center;
+    line-height: 4.5rem;
+    width: 28rem;
+    height: 4.5rem;
+    margin: 0 auto;
+    border: none;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: #3e2723;
+    background-color: #edf919;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+#loginApi > a:hover {
+    color: var(--header);
+    background-color: var(--main);
+}
+
+#loginApi > a > div {
+    margin: 0 2rem;
 }
 
 #loginApi > a > img {
@@ -147,4 +180,9 @@ body {
     color: var(--main);
     background-color: var(--header);
     box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+#goToJoin > a:hover {
+    color: var(--header);
+    background-color: var(--main);
 }
