--- a/front/views/layout/footer.html
+++ b/front/views/layout/footer.html
@@ -3,11 +3,11 @@
     <div id="footer">
         <div class="footerHeader">
             <ul>
-                <li><a href="#">홈페이지</a></li>
-                <li><a href="#">공지사항</a></li>
-                <li><a href="#">게시판</a></li>
-                <li><a href="#">Q & A</a></li>
-                <li><a href="#">관리자페이지</a></li>
+                <li><a href="/">홈페이지</a></li>
+                <li><a href="/notice">공지사항</a></li>
+                <li><a href="/board/list">게시판</a></li>
+                <li><a href="/qna">Q & A</a></li>
+                <li><a href="/admin">관리자페이지</a></li>
             </ul>
         </div>
         <div class="footerContents">
