--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -9,13 +9,13 @@
         <div id="sidebar">
             <div id="sidemenus">
                 <div class="sideloginWrap">
-                    <a href="#" class="sidelogin">로그인</a>
-                    <a href="#" class="sidelogin">회원가입</a>
+                    <a href="/user/login" class="sidelogin">로그인</a>
+                    <a href="/user/join" class="sidelogin">회원가입</a>
                 </div>
-                <div class="sidemenu">카테고리 1</div>
-                <div class="sidemenu">카테고리 2</div>
-                <div class="sidemenu">카테고리 3</div>
-                <div class="sidemenu">카테고리 4</div>
+                <a href="/board?category=카테고리1" class="sidemenu">카테고리 1</a>
+                <a href="/board?category=카테고리2" class="sidemenu">카테고리 2</a>
+                <a href="/board?category=카테고리3" class="sidemenu">카테고리 3</a>
+                <a href="/board?category=카테고리4" class="sidemenu">카테고리 4</a>
             </div>
         </div>
     </aside>
@@ -34,9 +34,10 @@
             </div>
             <div class="headerFunction">
                 <form class="searchWrap">
-                    <input id="search" class="invisible" type="text" />
-                    <button id="searchBtn" class="invisible">검색</button>
-                    <img id="searchIcon" src="/img/search.png" />
+                    <input id="search" class="" type="text" placeholder="search"/>
+                    <button id="searchBtn" class="">
+                        <img id="searchIcon" src="/img/search.png" />
+                    </button>
                 </form>
                 <div class="hamburgerBtn">
                     <span class="stick h1"></span>
@@ -47,4 +48,6 @@
         </div>
     </header>
 </div>
+<script src="/js/layout/header.js"></script>
+<script src="/js/layout/sidebar.js"></script>
 {% endblock %}
