--- a/front/views/user/login.html
+++ b/front/views/user/login.html
@@ -20,13 +20,17 @@
                     <div id="loginContentWrap">
                         <div id="loginContents">
                             <form id="loginBoxWrap" method="post" action="/user/login">
-                                <input type="text" name="userid" />
-                                <input type="password" name="userpw" />
+                                <input type="text" name="userid" placeholder="아이디를 입력해주세요."/>
+                                <input type="password" name="userpw" placeholder="비밀번호를 입력해주세요."/>
                                 <button src="submit">로그인</button>
                             </form>
                             <div id="loginApi">
-                                <a href="#"><img src="/img/loginKakao.png" /></a>
-                                <a href="#"><img src="/img/loginGoogle.png" /></a>
+                                <a href="#">
+                                    <img src="/img/loginKakao.png" />
+                                    <div>
+                                        카카오 로그인
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
