--- a/front/views/user/join.html
+++ b/front/views/user/join.html
@@ -38,7 +38,7 @@
                                         name="userid"
                                         placeholder="아이디를 입력해주세요"
                                     />
-                                    <button class="duplicate">중복 확인</button>
+                                    <!-- <button class="duplicate">중복 확인</button> -->
                                 </div>
                                 <div class="joinCheck">아이디를 확인해주세요</div>
                             </div>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="btnWrap">
-                            <button class="joinBtn" method="submit">회원가입</button>
+                            <button class="joinBtn" type="submit">회원가입</button>
                         </div>
                     </div>
                 </form>
