feat: join -> profile userid 정보 불러오기 완료

--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -40,15 +40,15 @@
                                 <div class="profileAccountInfo">
                                     <div class="profileAccountInfoContent">
                                         <div>이 &nbsp&nbsp&nbsp 름</div>
-                                        <div>{{result[0].username}}</div>
+                                        <div>{{result.data.username}}</div>
                                     </div>
                                     <div class="profileAccountInfoContent">
                                         <div>아&nbsp이&nbsp디</div>
-                                        <div>{{result[0].userid}}</div>
+                                        <div>{{result.data.userid}}</div>
                                     </div>
                                     <div class="profileAccountInfoContent">
                                         <div>이&nbsp메&nbsp일</div>
-                                        <div>{{result[0].useremail}}</div>
+                                        <div>{{result.data.email}}</div>
                                     </div>
                                 </div>
                             </div>
