--- a/front/views/user/join.html
+++ b/front/views/user/join.html
@@ -89,7 +89,7 @@
                                 <input
                                     class="joinInput"
                                     type="text"
-                                    name="useremail"
+                                    name="email"
                                     placeholder="이메일을 입력해주세요"
                                 />
                                 <div class="joinCheck">이메일을 확인해주세요</div>
