feat: profile ?page=page 로 이동하며 내림차순으로 최신 글 가져옴

--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -62,7 +62,7 @@
                     <!-- 제목 클릭-->
                     <div class="profileContents">
                         <input type="hidden" value="{{resultLength}}" class="resultLengthHidden" />
-                        {% for item in result %}
+                        {% for item in result.data.Boards %}
                         <div class="profileContentWrap">
                             <div class="profileContent">
                                 <div>{{item.subject}}</div>
