--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -99,14 +99,14 @@
 
                     <div class="profileBtnWrap">
                         <ul>
-                            <li class="prev">이전</li>
+                            <li class="prev"><a>이전</a></li>
                             <!-- {% set totalDate = resultLength %} {% set dataSize = 5 %} {% set
                             limitNumber = 5 %} {% set currentNumber = 3%} {% for list in result %}
                             <button>{{list}}</button>
                             {% endfor %} -->
 
                             <!-- <div>{{totalPage}}</div> -->
-                            <li clsss="next">다음</li>
+                            <li class="next"><a>다음</a></li>
                         </ul>
                     </div>
                 </section>
