--- a/front/views/user/join.html
+++ b/front/views/user/join.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <link rel="stylesheet" href="/css/root.css" />
         <link rel="stylesheet" href="/css/user/join.css" />
         <link rel="stylesheet" href="/css/layout/agree.css" />
@@ -36,9 +37,10 @@
                                         class="joinInputId"
                                         type="text"
                                         name="userid"
+                                        value=""
                                         placeholder="아이디를 입력해주세요"
                                     />
-                                    <!-- <button class="duplicate">중복 확인</button> -->
+                                    <input type="button" value="중복 확인" class="duplicate" />
                                 </div>
                                 <div class="joinCheck">아이디를 확인해주세요</div>
                             </div>
